--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fresco-development-tool-cli",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "Node command line tool to be used for general development and workflow enhancement.",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/FrescoDev/fresco-development-tool-cli#readme",
   "dependencies": {
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "mv": "^2.1.1",
+    "ncp": "^2.0.0",
+    "replace": "^0.3.0"
   }
 }
