--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node command line tool to be used for general development and workflow enhancement.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "patch-release": "npm version patch && npm publish && git push --follow-tags"
   },
   "repository": {
     "type": "git",
@@ -13,7 +14,7 @@
   "author": "frescoDev",
   "license": "ISC",
   "bin": {
-    "snippet": "./index.js"
+    "fresco": "./index.js"
   },
   "bugs": {
     "url": "https://github.com/FrescoDev/fresco-development-tool-cli/issues"
