--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/FrescoDev/fresco-development-tool-cli#readme",
   "dependencies": {
     "commander": "^2.9.0",
+    "get-installed-path": "^2.0.3",
     "mv": "^2.1.1",
     "ncp": "^2.0.0",
     "replace": "^0.3.0"
